# hri_multimodal_fusion

./: CMakeLists.txt  README.md  gtsam_tester.ipynb  oakd_cal.dot  package.xml  plugin_description.xml
config/: clutter_model.yaml  devel.rviz  filter_params.yaml  oakd.rviz  oakd.yaml  obs_model.yaml  trans_model.yaml
data/: person_moving_lab_1.bag  person_moving_lab_1.yaml  person_sitting_lab_1.bag  person_standing_lab_1.bag  person_standing_lab_1.yaml  person_standing_lab_2.bag  person_standing_lab_3.bag  person_standing_lab_3.yaml  test2.yaml
include/: filters.hpp  hri_factors.hpp  obs_models.hpp  state.hpp  transition_models.hpp
launch/: oakd.launch  oakd_filter.launch  oakd_filter_dev.launch
msg/: DetectionLabel.msg  DetectionLabelArray.msg  TrackedObject.msg
src/: cal_graph.cpp  inference_filter.cpp  inference_graph.cpp  oakd_cal_graph.cpp  oakd_inference_graph.cpp  oakd_train.cpp  tracked_object_display.cpp  tracked_object_display.h  tracked_object_visual.cpp  tracked_object_visual.h  tracked_object_viz_node.cpp  train_node.cpp
srv/: LabelBagData.srv
